--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,43 +5,37 @@ on:
     branches: [master]
 
 jobs:
-  build:
-    runs-on: ubuntu-20.04
 
-    strategy:
-      matrix:
-        node-version: [18.x]
+  build:
+
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Node.js
-        uses: actions/setup-node@v2.4.0  # Use the latest version of setup-node
-        with:
-          node-version: 18.x
 
-      - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Get Date
-        run: |
-          echo "date=$(/bin/date -u "+%Y%m%d")" >> $GITHUB_ENV
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7.6
+        
+    - name: Install Kivy dependencies
+      run: python -m pip install kivy[base] kivy_examples --no-cache-dir
 
-      - name: Cache Buildozer global directory
-        uses: actions/cache@v2
-        with:
-          path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
-          restore-keys: |
-            ${{ runner.os }}-${{ env.date }}-
-            ${{ runner.os }}-
-
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
-        with:
-          command: buildozer android debug
-          buildozer_version: stable
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: package
-          path: ${{ steps.buildozer.outputs.filename }}
+    - name: Build debug APK
+      uses: ArtemSBulgakov/buildozer-action@v1  
+      with:
+        buildozer_version: latest
+        command: buildozer android debug deploy
+        
+    - name: Copy logcat logs
+      run: cp -r $BUILDORA_ANDROID_LOGCAT_FILE logcat.txt
+            
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: kivy-app
+        path: |
+          *.apk
+          logcat.txt
