--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,33 +8,36 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
 
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+
+    - name: Set up Node 16
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-        architecture: x64
-        node: 16
-        
+
     - name: Install Kivy dependencies
       run: python -m pip install kivy[base] kivy_examples --no-cache-dir
 
     - name: Build debug APK
-      uses: ArtemSBulgakov/buildozer-action@v1  
-      with:
+      uses: ArtemSBulgakov/buildozer-action@v1
+      with: 
         buildozer_version: latest
         command: buildozer android debug deploy
         
     - name: Copy logcat logs
       run: cp -r $BUILDORA_ANDROID_LOGCAT_FILE logcat.txt
             
-    - name: Upload artifacts
+    - name: Upload artifacts  
       uses: actions/upload-artifact@v2
       with:
         name: kivy-app
