--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: Build Kivy APK
+name: CI
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
+
   build:
 
     runs-on: ubuntu-22.04
@@ -25,13 +25,16 @@ jobs:
       with:
         python-version: 3.7
 
+    - name: Upgrade pip
+      run: /bin/python3 -m pip install --upgrade pip
+
     - name: Install Kivy dependencies
       run: python -m pip install kivy[base] kivy_examples --no-cache-dir
 
     - name: Build debug APK
       uses: ArtemSBulgakov/buildozer-action@v1
       with: 
-        buildozer_version: latest
+        buildozer_version: v1.5.0  # Replace with the desired buildozer version
         command: buildozer android debug deploy
         
     - name: Copy logcat logs
