--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,47 +5,43 @@ on:
     branches: [master]
 
 jobs:
-
   build:
+    runs-on: ubuntu-20.04
 
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v2.4.0  # Use the latest version of setup-node
+        with:
+          node-version: 18.x
 
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        node-version: 16  # Explicitly set Node version to 16
+      - uses: actions/checkout@v2
 
-    - name: Set up Node 16
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16
+      - name: Get Date
+        run: |
+          echo "date=$(/bin/date -u "+%Y%m%d")" >> $GITHUB_ENV
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
+      - name: Cache Buildozer global directory
+        uses: actions/cache@v2
+        with:
+          path: .buildozer_global
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+          restore-keys: |
+            ${{ runner.os }}-${{ env.date }}-
+            ${{ runner.os }}-
 
-    - name: Upgrade pip
-      run: /bin/python3 -m pip install --upgrade pip
+      - name: Build with Buildozer
+        uses: ArtemSBulgakov/buildozer-action@v1
+        id: buildozer
+        with:
+          command: buildozer android debug
+          buildozer_version: stable
 
-    - name: Install Kivy dependencies
-      run: python -m pip install kivy[base] kivy_examples --no-cache-dir
-
-    - name: Build debug APK
-      uses: ArtemSBulgakov/buildozer-action@v1
-      with: 
-        buildozer_version: v1.2.0  # Replace with the desired buildozer version
-        command: buildozer android debug deploy
-        
-    - name: Copy logcat logs
-      run: cp -r $BUILDORA_ANDROID_LOGCAT_FILE logcat.txt
-            
-    - name: Upload artifacts  
-      uses: actions/upload-artifact@v2
-      with:
-        name: kivy-app
-        path: |
-          *.apk
-          logcat.txt
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: ${{ steps.buildozer.outputs.filename }}
