--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   build:
@@ -14,11 +15,12 @@ jobs:
 
     steps:
       - name: Set up Node.js
-        uses: actions/setup-node@v2.4.0  # Use the latest version of setup-node
+        uses: actions/setup-node@v2  # Use the latest version of setup-node
         with:
-          node-version: 18.x
+          node-version: ${{ matrix.node-version }}
 
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - name: Get Date
         run: |
@@ -28,7 +30,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .buildozer_global
-          key: buildozer-global-${{ hashFiles('buildozer.spec') }} # Replace with your path
+          key: buildozer-global-${{ hashFiles('buildozer.spec') }}
           restore-keys: |
             ${{ runner.os }}-${{ env.date }}-
             ${{ runner.os }}-
